integration_tests/tests/compile/fail_ulogdata_generic.rs
use yule_log::ULogData;

#[derive(ULogData)]
pub struct GenericStruct<T> {
    value: T,
}

fn main() {}
